--- a/client/static/dark-mode.css
+++ b/client/static/dark-mode.css
@@ -13,3 +13,15 @@ html body {
   --secondaryText: #CBD5E0;
   --borderColor: #596579;
 }
+
+.introjs-tooltip {
+  background-color: var(--background1);
+}
+
+.introjs-arrow {
+  border-top-color: var(--background1) !important;
+}
+
+.introjs-helperLayer {
+  background-color: var(--background2);
+}
